# penguinchess

./: .gitattributes  .gitignore  AGENTS.md  IMPROVEMENTS.md  README.md  STATUS.md  _check_registry.py  _clean_registry.py  analyze.py  check_dims.py  check_kernel.py  coord_test.py  debug_coords.py  debug_exact_log.py  debug_hex38.py  debug_piece7.py  debug_reproduce.py  debug_user_log.py  eval_large_nnue.py  main.py  package.json  profile_ab.py  pyproject.toml  pytest.ini  start_all.py  start_server.bat  test_cascade.py  test_core.py  test_corner_death.py  test_optimization.py  test_piece_death2.py  test_piece_death_debug.py  test_script.py  upload_kaggle.py  verify_rust_infer.py
.opencode/: opencode.json  tui.json
ab_nnue/: continue_train.py  multi_teacher_train.py  nnue_fast.py  nnue_finetune.py  nnue_improve.py  nnue_iteration.py  nnue_mcts.py  nnue_rust.py  nnue_selfplay.py  pt_scratch.py  train.py  train_large.py  train_large_oneshot.py
alphazero/: ab_distill.py  evaluate.py  launch.py  random_ai.py  train.py  train_large.py  train_latest.cmd
docs/: ARCHITECTURE.md  AZ_MCTS_SUMMARY.md  AZ_NNUE_PLAN.md  BOARD_EDITOR.md  KAGGLE_GUIDE.md  MCTS_PLAN.md  OPTIMIZATION.md  RULES.md  TECHNICAL_REFERENCE.md  TRAINING_STANDARDS.md
examples/: eval_elo.py  random_ai.py  train_nnue_iteration.py  train_nnue_mcts.py  train_nnue_random.py  train_nnue_selfplay.py  train_pipeline.py  train_ppo.py
frontend/: index.html  package.json  vite.config.ts
game_engine/: Cargo.toml
game_engine/src/: alphabeta_rs.rs  az_model.rs  board.rs  ffi.rs  lib.rs  mcts_rs.rs  net_infer.rs  nnue_candle.rs  nnue_rs.rs  nnue_train.rs  rules.rs
kaggle/: _training_code.py  check_api.py  fetch_nb.py  find_kernel.py  get_session.py  kaggle_train_xl.py  push_api.py  push_nb.py  sync.py  test_weights.py  upload_api.py
models/: model_registry.json  ppo_penguinchess_gen_1_norm_stats.pkl  registry_0672d31.json  training_status.json
penguinchess/: __init__.py  _compat.py  core.py  env.py  eval_utils.py  model_registry.py  reward.py  rust_bridge.py  rust_core.py  rust_ffi.py  spaces.py  training_status.py
ppo/: train.py
scripts/: ab_nnue_cycle.py  adaptive_cycle.py  az_vs_random.py  bench_large_final.py  bench_large_mcts.py  bench_mcts_vs_gen2.py  clear_az_elo.py  (+32 more)
(+312 files in other folders)
