[package]
name = "game_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
rand_distr = "0.4"
ort = { version = "2.0.0-rc.12", features = ["cuda", "ndarray"], optional = true }
ndarray = { version = "0.17", optional = true }

[features]
default = []
ort = ["dep:ort", "dep:ndarray"]

[lib]
crate-type = ["lib", "cdylib"]

[[bin]]
name = "game_engine_cli"
path = "src/bin/cli.rs"
